@@ -15,10 +15,12 @@ import org.springframework.http.MediaType;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 import uk.gov.hmcts.reform.pip.account.management.model.MediaApplication;
 import uk.gov.hmcts.reform.pip.account.management.model.MediaApplicationStatus;
+import uk.gov.hmcts.reform.pip.account.management.service.AuthorisationService;
 import uk.gov.hmcts.reform.pip.account.management.utils.IntegrationTestBase;
 
 import java.io.InputStream;
@@ -33,6 +35,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
@@ -61,6 +64,8 @@ class MediaApplicationTest extends IntegrationTestBase {
     private static final String REPORT_APPLICATIONS_URL = ROOT_URL + "/reporting";
     private static final String UNAUTHORIZED_USERNAME = "unauthorized_username";
     private static final String UNAUTHORIZED_ROLE = "APPROLE_unknown.role";
+    private static final String REQUESTER_HEADER = "x-requester-id";
+    private static final UUID REQUESTER_ID = UUID.randomUUID();
 
     private ObjectMapper objectMapper;
     private static final String FULL_NAME = "Test user";
@@ -80,6 +85,9 @@ class MediaApplicationTest extends IntegrationTestBase {
 
     private static final Map<String, List<String>> REASONS = new ConcurrentHashMap<>();
 
+    @MockitoBean
+    private AuthorisationService authorisationService;
+
     @BeforeAll
     static void beforeAllSetup() {
         REASONS.put("Reason A", List.of("Text A", "Text B"));
@@ -89,6 +97,8 @@ class MediaApplicationTest extends IntegrationTestBase {
     void setup() {
         objectMapper = new ObjectMapper();
         objectMapper.findAndRegisterModules();
+        when(authorisationService.userCanViewMediaApplications(any())).thenReturn(true);
+        when(authorisationService.userCanUpdateMediaApplications(any())).thenReturn(true);
     }
 
     @SuppressWarnings("PMD.SignatureDeclareThrowsException")
@@ -210,10 +220,10 @@ class MediaApplicationTest extends IntegrationTestBase {
 
         List<MediaApplication> applicationList = List.of(arrayApplications);
 
-        assertEquals(application.getEmail(), applicationList.get(0).getEmail(), EMAIL_NOT_MATCH);
-        assertEquals(FORMATTED_FULL_NAME, applicationList.get(0).getFullName(), FULLNAME_NOT_FORMATTTED);
-        assertEquals(application.getStatus(), applicationList.get(0).getStatus(), STATUSES_NOT_MATCH);
-        assertNotNull(applicationList.get(0).getImage(), "Image url is null");
+        assertEquals(application.getEmail(), applicationList.getFirst().getEmail(), EMAIL_NOT_MATCH);
+        assertEquals(FORMATTED_FULL_NAME, applicationList.getFirst().getFullName(), FULLNAME_NOT_FORMATTTED);
+        assertEquals(application.getStatus(), applicationList.getFirst().getStatus(), STATUSES_NOT_MATCH);
+        assertNotNull(applicationList.getFirst().getImage(), "Image url is null");
     }
 
     @Test
@@ -227,9 +237,10 @@ class MediaApplicationTest extends IntegrationTestBase {
     void testGetApplicationsByStatus() throws Exception {
         MediaApplication application = createApplication();
 
-        MvcResult mvcResult = mockMvc.perform(get(GET_STATUS_URL, PENDING_STATUS))
-            .andExpect(status().isOk())
-            .andReturn();
+        MvcResult mvcResult = mockMvc.perform(get(GET_STATUS_URL, PENDING_STATUS)
+            .header(REQUESTER_HEADER, REQUESTER_ID))
+                .andExpect(status().isOk())
+                .andReturn();
 
         MediaApplication[] arrayApplications = objectMapper.readValue(
             mvcResult.getResponse()
@@ -239,17 +250,18 @@ class MediaApplicationTest extends IntegrationTestBase {
 
         List<MediaApplication> applicationList = Arrays.asList(arrayApplications);
 
-        assertEquals(application.getEmail(), applicationList.get(0).getEmail(), EMAIL_NOT_MATCH);
-        assertEquals(FORMATTED_FULL_NAME, applicationList.get(0).getFullName(), FULLNAME_NOT_FORMATTTED);
-        assertEquals(application.getStatus(), applicationList.get(0).getStatus(), STATUSES_NOT_MATCH);
-        assertNotNull(applicationList.get(0).getImage(), "Image url is null");
+        assertEquals(application.getEmail(), applicationList.getFirst().getEmail(), EMAIL_NOT_MATCH);
+        assertEquals(FORMATTED_FULL_NAME, applicationList.getFirst().getFullName(), FULLNAME_NOT_FORMATTTED);
+        assertEquals(application.getStatus(), applicationList.getFirst().getStatus(), STATUSES_NOT_MATCH);
+        assertNotNull(applicationList.getFirst().getImage(), "Image url is null");
 
     }
 
     @Test
     @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
     void testGetApplicationsByStatusUnauthorised() throws Exception {
-        mockMvc.perform(get(GET_STATUS_URL, PENDING_STATUS))
+        when(authorisationService.userCanViewMediaApplications(any())).thenReturn(false);
+        mockMvc.perform(get(GET_STATUS_URL, PENDING_STATUS).header(REQUESTER_HEADER, TEST_ID))
             .andExpect(status().isForbidden());
     }
 
@@ -257,7 +269,8 @@ class MediaApplicationTest extends IntegrationTestBase {
     void testGetApplicationById() throws Exception {
         MediaApplication application = createApplication();
 
-        MvcResult mvcResult = mockMvc.perform(get(GET_BY_ID_URL, application.getId()))
+        MvcResult mvcResult = mockMvc.perform(get(GET_BY_ID_URL, application.getId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isOk())
             .andReturn();
 
@@ -274,7 +287,7 @@ class MediaApplicationTest extends IntegrationTestBase {
 
     @Test
     void testGetApplicationByIdNotFound() throws Exception {
-        MvcResult mvcResult = mockMvc.perform(get(GET_BY_ID_URL, TEST_ID))
+        MvcResult mvcResult = mockMvc.perform(get(GET_BY_ID_URL, TEST_ID).header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isNotFound())
             .andReturn();
 
@@ -284,7 +297,8 @@ class MediaApplicationTest extends IntegrationTestBase {
     @Test
     @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
     void testGetApplicationByIdUnauthorised() throws Exception {
-        mockMvc.perform(get(GET_BY_ID_URL, TEST_ID))
+        when(authorisationService.userCanViewMediaApplications(any())).thenReturn(false);
+        mockMvc.perform(get(GET_BY_ID_URL, TEST_ID).header(REQUESTER_HEADER, TEST_ID))
             .andExpect(status().isForbidden());
     }
 
@@ -297,9 +311,10 @@ class MediaApplicationTest extends IntegrationTestBase {
 
         when(blobClient.downloadContent()).thenReturn(binaryData);
 
-        MvcResult mvcResult = mockMvc.perform(get(GET_IMAGE_BY_ID_URL, application.getImage()))
-            .andExpect(status().isOk())
-            .andReturn();
+        MvcResult mvcResult = mockMvc.perform(get(GET_IMAGE_BY_ID_URL, application.getImage())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
+                .andExpect(status().isOk())
+                .andReturn();
 
         assertEquals("Image", mvcResult.getResponse().getContentAsString(), "Images do not match");
     }
@@ -310,7 +325,7 @@ class MediaApplicationTest extends IntegrationTestBase {
 
         when(blobClient.downloadContent()).thenThrow(BlobStorageException.class);
 
-        MvcResult mvcResult = mockMvc.perform(get(GET_IMAGE_BY_ID_URL, TEST_ID))
+        MvcResult mvcResult = mockMvc.perform(get(GET_IMAGE_BY_ID_URL, TEST_ID).header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isNotFound())
             .andReturn();
 
@@ -320,7 +335,8 @@ class MediaApplicationTest extends IntegrationTestBase {
     @Test
     @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
     void testGetImageByIdUnauthorised() throws Exception {
-        mockMvc.perform(get(GET_IMAGE_BY_ID_URL, TEST_ID))
+        when(authorisationService.userCanViewMediaApplications(any())).thenReturn(false);
+        mockMvc.perform(get(GET_IMAGE_BY_ID_URL, TEST_ID).header(REQUESTER_HEADER, TEST_ID))
             .andExpect(status().isForbidden());
     }
 
@@ -368,9 +384,10 @@ class MediaApplicationTest extends IntegrationTestBase {
 
         MvcResult mvcResult = mockMvc.perform(put(UPDATE_APPLICATION_REJECTION_URL, application.getId(),
                                                   MediaApplicationStatus.REJECTED
-            ).content(objectMapper.writeValueAsString(REASONS)).contentType(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andReturn();
+            ).content(objectMapper.writeValueAsString(REASONS)).contentType(MediaType.APPLICATION_JSON)
+            .header(REQUESTER_HEADER, REQUESTER_ID))
+                .andExpect(status().isOk())
+                .andReturn();
 
         MediaApplication returnedApplication = objectMapper.readValue(
             mvcResult.getResponse()
@@ -387,9 +404,10 @@ class MediaApplicationTest extends IntegrationTestBase {
     void testUpdateApplicationRejectionNotFound() throws Exception {
         MvcResult mvcResult = mockMvc.perform(put(UPDATE_APPLICATION_REJECTION_URL, TEST_ID,
                                                   MediaApplicationStatus.REJECTED
-            ).content(objectMapper.writeValueAsString(REASONS)).contentType(MediaType.APPLICATION_JSON))
-            .andExpect(status().isNotFound())
-            .andReturn();
+            ).content(objectMapper.writeValueAsString(REASONS)).contentType(MediaType.APPLICATION_JSON)
+            .header(REQUESTER_HEADER, REQUESTER_ID))
+                .andExpect(status().isNotFound())
+                .andReturn();
 
         assertTrue(mvcResult.getResponse().getContentAsString()
                        .contains("Application with id " + TEST_ID + " could not be found"), NOT_FOUND_ERROR);
@@ -399,10 +417,11 @@ class MediaApplicationTest extends IntegrationTestBase {
     @Test
     @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
     void testUpdateApplicationRejectionUnauthorised() throws Exception {
+        when(authorisationService.userCanUpdateMediaApplications(any())).thenReturn(false);
         mockMvc.perform(put(UPDATE_APPLICATION_REJECTION_URL, TEST_ID,
                             MediaApplicationStatus.REJECTED
             ).content(objectMapper.writeValueAsString(REASONS)).contentType(MediaType.APPLICATION_JSON)
-                            .contentType(MediaType.APPLICATION_JSON))
+                            .contentType(MediaType.APPLICATION_JSON).header(REQUESTER_HEADER, TEST_ID))
             .andExpect(status().isForbidden());
     }
 
