@@ -27,6 +27,7 @@ import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import uk.gov.hmcts.reform.pip.account.management.model.account.CreationEnum;
 import uk.gov.hmcts.reform.pip.account.management.model.account.PiUser;
 import uk.gov.hmcts.reform.pip.account.management.model.account.SystemAdminAccount;
+import uk.gov.hmcts.reform.pip.account.management.service.AuthorisationService;
 import uk.gov.hmcts.reform.pip.account.management.utils.IntegrationTestBase;
 import uk.gov.hmcts.reform.pip.model.account.Roles;
 import uk.gov.hmcts.reform.pip.model.account.UserProvenances;
@@ -70,6 +71,9 @@ class AccountTest extends IntegrationTestBase {
     @Mock
     private UserItemRequestBuilder userItemRequestBuilder;
 
+    @MockitoBean
+    private AuthorisationService authorisationService;
+
     private static final String ROOT_URL = "/account";
     private static final String PI_URL = ROOT_URL + "/add/pi";
     private static final String CREATE_MEDIA_USER_URL = "/application";
@@ -78,8 +82,8 @@ class AccountTest extends IntegrationTestBase {
     private static final String CREATE_SYSTEM_ADMIN_URL = ROOT_URL + "/add/system-admin";
 
     private static final String EMAIL = "test_account_admin@hmcts.net";
-    private static final String SYSTEM_ADMIN_EMAIL = "test_account_system-admin@hmcts.net";
-    private static final String SYSTEM_ADMIN_ISSUER_ID = "87f907d2-eb28-42cc-b6e1-ae2b03f7bba2";
+    private static final UUID SYSTEM_ADMIN_ISSUER_ID = UUID.randomUUID();
+    private static final String SYSTEM_ADMIN_ID = "87f907d2-eb28-42cc-b6e1-ae2b03f7bba2";
 
     private static final String INVALID_EMAIL = "ab";
     private static final String SURNAME = "Surname";
@@ -89,6 +93,8 @@ class AccountTest extends IntegrationTestBase {
     private static final String SUPER_ADMIN_ISSUER_ID = "87f907d2-eb28-42cc-b6e1-ae2b03f7bba3";
     private static final String ISSUER_HEADER = "x-issuer-id";
     private static final String ADMIN_HEADER = "x-admin-id";
+    private static final String REQUESTER_HEADER = "x-requester-id";
+    private static final UUID USER_ID = UUID.randomUUID();
     private static final String GIVEN_NAME = "Given Name";
     private static final String ID = "1234";
     private static final String ADDITIONAL_ID = "4321";
@@ -162,6 +168,10 @@ class AccountTest extends IntegrationTestBase {
 
         when(graphClient.users()).thenReturn(usersRequestBuilder);
         when(usersRequestBuilder.post(any())).thenReturn(userToReturn, additionalUser);
+
+        when(authorisationService.userCanCreateAccount(any(), any())).thenReturn(true);
+        when(authorisationService.userCanViewAccounts(any())).thenReturn(true);
+        when(authorisationService.userCanDeleteAccount(any(), any())).thenReturn(true);
     }
 
     @Test
@@ -187,7 +197,6 @@ class AccountTest extends IntegrationTestBase {
 
     @Test
     void testCreateSsoUser() throws Exception {
-
         PiUser validUser = new PiUser();
         validUser.setEmail("sso@justice.gov.uk");
         validUser.setProvenanceUserId(UUID.randomUUID().toString());
@@ -510,10 +519,10 @@ class AccountTest extends IntegrationTestBase {
                 }
             );
 
-        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
 
         MockHttpServletRequestBuilder getRequest = MockMvcRequestBuilders
-            .get(ROOT_URL + "/" + createdUserId);
+            .get(ROOT_URL + "/" + createdUserId).header(REQUESTER_HEADER, SYSTEM_ADMIN_ISSUER_ID);
 
         MvcResult responseGetUser = mockMvc.perform(getRequest).andExpect(status().isOk()).andReturn();
 
@@ -527,7 +536,7 @@ class AccountTest extends IntegrationTestBase {
     @Test
     void testGetUserByIdNotFound() throws Exception {
         MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-            .get(ROOT_URL + "/" + UUID.randomUUID());
+            .get(ROOT_URL + "/" + UUID.randomUUID()).header(REQUESTER_HEADER, SYSTEM_ADMIN_ISSUER_ID);
 
         MvcResult mvcResult = mockMvc.perform(request).andExpect(status().isNotFound()).andReturn();
 
@@ -555,10 +564,10 @@ class AccountTest extends IntegrationTestBase {
                 }
             );
 
-        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
 
         MockHttpServletRequestBuilder deleteRequest = MockMvcRequestBuilders
-            .delete(ROOT_URL + DELETE_PATH + createdUserId);
+            .delete(ROOT_URL + DELETE_PATH + createdUserId).header(ADMIN_HEADER, SYSTEM_ADMIN_ISSUER_ID);
 
         MvcResult mvcResult = mockMvc.perform(deleteRequest).andExpect(status().isOk()).andReturn();
         assertEquals(DELETE_USER_SUCCESS, mvcResult.getResponse().getContentAsString(),
@@ -569,9 +578,10 @@ class AccountTest extends IntegrationTestBase {
     @Test
     void testDeleteAccountNotFound() throws Exception {
         MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-            .delete(ROOT_URL + DELETE_PATH + UUID.randomUUID());
+            .delete(ROOT_URL + DELETE_PATH + USER_ID).header(ADMIN_HEADER, SYSTEM_ADMIN_ISSUER_ID);
 
-        MvcResult mvcResult = mockMvc.perform(request).andExpect(status().isNotFound()).andReturn();
+        MvcResult mvcResult = mockMvc.perform(request)
+            .andExpect(status().isNotFound()).andReturn();
 
         assertEquals(NOT_FOUND.value(), mvcResult.getResponse().getStatus(),
                      NOT_FOUND_STATUS_CODE_MESSAGE
@@ -599,7 +609,7 @@ class AccountTest extends IntegrationTestBase {
                 }
             );
 
-        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
         MockHttpServletRequestBuilder deleteRequest = MockMvcRequestBuilders
             .delete(ROOT_URL + DELETE_PATH_V2 + createdUserId)
             .header(ADMIN_HEADER, SYSTEM_ADMIN_ISSUER_ID);
@@ -613,7 +623,6 @@ class AccountTest extends IntegrationTestBase {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = ADD_USERS_SCRIPT)
     void testV2SystemAdminDeletesThirdPartyUser() throws Exception {
-
         PiUser thirdPartyUser = createThirdPartyUser();
         MockHttpServletRequestBuilder createRequest = MockMvcRequestBuilders
             .post(PI_URL)
@@ -630,7 +639,7 @@ class AccountTest extends IntegrationTestBase {
                 }
             );
 
-        String thirdPartyUserIdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        String thirdPartyUserIdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
 
         MockHttpServletRequestBuilder deleteRequest = MockMvcRequestBuilders
             .delete(ROOT_URL + DELETE_PATH_V2 + thirdPartyUserIdUserId)
@@ -660,60 +669,10 @@ class AccountTest extends IntegrationTestBase {
     }
 
     @Test
-    void testV2SuperAdminDeletesVerifiedUser() throws Exception {
-        validUser.setUserProvenance(UserProvenances.CFT_IDAM);
-        validUser.setRoles(Roles.VERIFIED);
-        MockHttpServletRequestBuilder createRequest =
-            MockMvcRequestBuilders
-                .post(PI_URL)
-                .content(OBJECT_MAPPER.writeValueAsString(List.of(validUser)))
-                .header(ISSUER_HEADER, SYSTEM_ADMIN_ISSUER_ID)
-                .contentType(MediaType.APPLICATION_JSON);
-
-        MvcResult responseCreateUser = mockMvc.perform(createRequest)
-            .andExpect(status().isCreated()).andReturn();
-        Map<CreationEnum, List<Object>> mappedResponse =
-            OBJECT_MAPPER.readValue(
-                responseCreateUser.getResponse().getContentAsString(),
-                new TypeReference<>() {
-                }
-            );
-
-        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
-        String superAdminUserId = getSuperAdminUserId(superAdminUser);
-
-        MockHttpServletRequestBuilder deleteRequest = MockMvcRequestBuilders
-            .delete(ROOT_URL + DELETE_PATH_V2 + createdUserId)
-            .header(ADMIN_HEADER, superAdminUserId);
-
-        mockMvc.perform(deleteRequest).andExpect(status().isForbidden()).andReturn();
-    }
-
-    @Test
-    void testV2SuperAdminDeletesSuperAdminUser() throws Exception {
-        String superAdminUserId = getSuperAdminUserId(superAdminUser);
-
-        superAdminUser.setUserProvenance(UserProvenances.CFT_IDAM);
-        superAdminUser.setEmail("superAdminToDelete@justice.gov.uk");
-        String superAdminUserIdToDelete = getSuperAdminUserId(superAdminUser);
-
-        MockHttpServletRequestBuilder deleteRequest = MockMvcRequestBuilders
-            .delete(ROOT_URL + DELETE_PATH_V2 + superAdminUserIdToDelete)
-            .header(ADMIN_HEADER, superAdminUserId);
-
-        MvcResult mvcResult = mockMvc.perform(deleteRequest).andExpect(status().isOk()).andReturn();
-        assertEquals(DELETE_USER_SUCCESS, mvcResult.getResponse().getContentAsString(),
-                     DELETE_USER_FAILURE
-        );
-    }
-
-    @Test
     void testV2DeleteAccountNotFound() throws Exception {
-        String superAdminUserId = getSuperAdminUserId(superAdminUser);
-
         MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-            .delete(ROOT_URL + DELETE_PATH_V2 + UUID.randomUUID())
-            .header(ADMIN_HEADER, superAdminUserId);
+            .delete(ROOT_URL + DELETE_PATH_V2 + USER_ID)
+            .header(ADMIN_HEADER, SYSTEM_ADMIN_ISSUER_ID);
 
         MvcResult mvcResult = mockMvc.perform(request).andExpect(status().isNotFound()).andReturn();
 
@@ -742,13 +701,14 @@ class AccountTest extends IntegrationTestBase {
                 }
             );
 
-        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
         String superAdminUserId = getSuperAdminUserId(superAdminUser);
 
         MockHttpServletRequestBuilder updateRequest = MockMvcRequestBuilders
             .put(ROOT_URL + UPDATE_PATH + createdUserId + "/" + Roles.INTERNAL_ADMIN_LOCAL)
             .header(ADMIN_HEADER, superAdminUserId);
 
+        when(authorisationService.userCanUpdateAccount(any(), any())).thenReturn(true);
         MvcResult responseUpdatedUser = mockMvc.perform(updateRequest)
             .andExpect(status().isOk()).andReturn();
 
@@ -777,7 +737,7 @@ class AccountTest extends IntegrationTestBase {
                 }
             );
 
-        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
 
         MockHttpServletRequestBuilder updateRequest = MockMvcRequestBuilders
             .put(ROOT_URL + UPDATE_PATH + createdUserId + "/" + Roles.INTERNAL_ADMIN_LOCAL);
@@ -805,7 +765,7 @@ class AccountTest extends IntegrationTestBase {
                 }
             );
 
-        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
         PiUser superAdminUser = createUser(true, Roles.INTERNAL_ADMIN_LOCAL);
         String superAdminUserId = getSuperAdminUserId(superAdminUser);
 
@@ -836,7 +796,7 @@ class AccountTest extends IntegrationTestBase {
                 }
             );
 
-        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
 
         MockHttpServletRequestBuilder updateRequest = MockMvcRequestBuilders
             .put(ROOT_URL + UPDATE_PATH + createdUserId + "/" + Roles.INTERNAL_ADMIN_LOCAL)
@@ -854,6 +814,7 @@ class AccountTest extends IntegrationTestBase {
             .put(ROOT_URL + UPDATE_PATH + UUID.randomUUID() + "/" + Roles.INTERNAL_ADMIN_LOCAL)
             .header(ADMIN_HEADER, superAdminUserId);
 
+        when(authorisationService.userCanUpdateAccount(any(), any())).thenReturn(true);
         MvcResult mvcResult = mockMvc.perform(request)
             .andExpect(status().isNotFound())
             .andReturn();
@@ -867,6 +828,7 @@ class AccountTest extends IntegrationTestBase {
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = ADD_USERS_SCRIPT)
     void testCreateThirdPartyUser() throws Exception {
         PiUser thirdPartyUser = createThirdPartyUser();
+
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(PI_URL)
             .content(OBJECT_MAPPER.writeValueAsString(List.of(thirdPartyUser)))
@@ -893,9 +855,10 @@ class AccountTest extends IntegrationTestBase {
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(PI_URL)
             .content(OBJECT_MAPPER.writeValueAsString(List.of(thirdPartyUser)))
-            .header(ISSUER_HEADER, SUPER_ADMIN_ISSUER_ID)
+            .header(ISSUER_HEADER, SYSTEM_ADMIN_ISSUER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
+        when(authorisationService.userCanCreateAccount(any(), any())).thenReturn(false);
         MvcResult mvcResult =
             mockMvc.perform(mockHttpServletRequestBuilder).andExpect(status().isForbidden()).andReturn();
 
@@ -912,6 +875,8 @@ class AccountTest extends IntegrationTestBase {
             .content(OBJECT_MAPPER.writeValueAsString(List.of(validUser)))
             .header(ISSUER_HEADER, SYSTEM_ADMIN_ISSUER_ID)
             .contentType(MediaType.APPLICATION_JSON);
+
+        when(authorisationService.userCanCreateAccount(any(), any())).thenReturn(false);
 
         MvcResult response = mockMvc.perform(mockHttpServletRequestBuilder)
             .andExpect(status().isForbidden()).andReturn();
@@ -989,8 +954,9 @@ class AccountTest extends IntegrationTestBase {
     @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
     void testUnauthorizedGetUserById() throws Exception {
         MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-            .get(ROOT_URL + "/" + UUID.randomUUID());
+            .get(ROOT_URL + "/" + UUID.randomUUID()).header(REQUESTER_HEADER, SUPER_ADMIN_ISSUER_ID);
 
+        when(authorisationService.userCanViewAccounts(any())).thenReturn(false);
         MvcResult mvcResult = mockMvc.perform(request).andExpect(status().isForbidden()).andReturn();
 
         assertEquals(FORBIDDEN.value(), mvcResult.getResponse().getStatus(),
@@ -1002,7 +968,9 @@ class AccountTest extends IntegrationTestBase {
     @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
     void testUnauthorizedDeleteAccount() throws Exception {
         MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-            .delete(ROOT_URL + "/delete/" + UUID.randomUUID());
+            .delete(ROOT_URL + "/delete/" + USER_ID).header(ADMIN_HEADER, USER_ID);
+
+        when(authorisationService.userCanDeleteAccount(any(), any())).thenReturn(false);
 
         MvcResult mvcResult = mockMvc.perform(request)
             .andExpect(status().isForbidden()).andReturn();
@@ -1018,9 +986,10 @@ class AccountTest extends IntegrationTestBase {
     @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
     void testUnauthorizedDeleteAccountV2() throws Exception {
         MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-            .delete(ROOT_URL + DELETE_PATH_V2 + VERIFIED_USER_ID)
+            .delete(ROOT_URL + DELETE_PATH_V2 + USER_ID)
             .header(ADMIN_HEADER, SYSTEM_ADMIN_ISSUER_ID);
 
+        when(authorisationService.userCanDeleteAccount(any(), any())).thenReturn(false);
         MvcResult mvcResult = mockMvc.perform(request)
             .andExpect(status().isForbidden()).andReturn();
 
@@ -1033,8 +1002,9 @@ class AccountTest extends IntegrationTestBase {
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {ADD_USERS_SCRIPT, ADD_VERIFIED_USERS_SCRIPT})
     void testUnauthorizedDeleteAccountV2WhenNoUserId() throws Exception {
+        when(authorisationService.userCanDeleteAccount(any(), any())).thenReturn(false);
         MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-            .delete(ROOT_URL + DELETE_PATH_V2 + VERIFIED_USER_ID);
+            .delete(ROOT_URL + DELETE_PATH_V2 + USER_ID).header(ADMIN_HEADER, SYSTEM_ADMIN_ISSUER_ID);
 
         MvcResult mvcResult = mockMvc.perform(request)
             .andExpect(status().isForbidden()).andReturn();
@@ -1063,7 +1033,7 @@ class AccountTest extends IntegrationTestBase {
                 }
             );
 
-        return mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        return mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
     }
 
     @SuppressWarnings("PMD.SignatureDeclareThrowsException")
@@ -1077,8 +1047,10 @@ class AccountTest extends IntegrationTestBase {
             MockMvcRequestBuilders
                 .post(CREATE_SYSTEM_ADMIN_URL)
                 .content(OBJECT_MAPPER.writeValueAsString(systemAdmin))
-                .header(ISSUER_HEADER, SYSTEM_ADMIN_ISSUER_ID)
+                .header(ISSUER_HEADER, SYSTEM_ADMIN_ID)
                 .contentType(MediaType.APPLICATION_JSON);
+
+        when(authorisationService.userCanCreateSystemAdmin(any())).thenReturn(true);
 
         MvcResult responseCreateSystemAdminUser = mockMvc.perform(createRequest)
             .andExpect(status().isOk()).andReturn();
